--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
     environment:
       - SWAGGER_JSON=/mnt/openapi.json
     volumes:
-      - /openapi.json:/mnt/openapi.json
+      - ./openapi.json:/mnt/openapi.json
