--- a/requirements.txt
+++ b/requirements.txt
@@ -110,7 +110,7 @@ terminado==0.18.1
 tinycss2==1.3.0
 tornado==6.4
 traitlets==5.14.3
-typer==0.12.3
+typer>=0.6,<0.13
 types-python-dateutil==2.9.0.20240316
 typing_extensions==4.11.0
 ujson==5.10.0
