--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,5 @@
+version: '3'
 services:
-  app:
-    build: .
-    volumes:
-      - .:/app
   cc_swagger:
     image: swaggerapi/swagger-ui
     ports:
@@ -10,4 +7,4 @@ services:
     environment:
       - SWAGGER_JSON=/mnt/openapi.json
     volumes:
-      - /Users/phamthanh/Desktop/openapi.json:/mnt/openapi.json
+      - ./openapi.json:/mnt/openapi.json
