--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,29 @@
 version: '3'
 services:
   app:
-    build: .
-    command: [ "python", "-m", "uvicorn", "main:app", "--reload", "--host", "0.0.0.0", "--port", "8002" ]
+    image: fastapi-app:v1
+    restart: always
+    container_name: app_1
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: [ "python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8002", "--reload" ]
     volumes:
       - .:/app
     ports:
       - 8002:8002
-  mock_server:
-    image: mockoon/cli:latest
-    command: ["--data", "data", "--port", "3001"]
-    volumes:
-      - ./mockoon/concung.json:/data:ro
-    ports:
-      - 3001:3001
-  cc_swagger:
-    image: swaggerapi/swagger-ui
-    ports:
-      - "8081:8080"
-    environment:
-      - SWAGGER_JSON=/mnt/openapi.json
-    volumes:
-      - ./openapi.json:/mnt/openapi.json
+#  mock_server:
+#    image: mockoon/cli:latest
+#    command: [ "--data", "data", "--port", "3001" ]
+#    volumes:
+#      - ./mockoon/concung.json:/data:ro
+#    ports:
+#      - 3001:3001
+#  cc_swagger:
+#    image: swaggerapi/swagger-ui
+#    ports:
+#      - "8081:8080"
+#    environment:
+#      - SWAGGER_JSON=/mnt/openapi.json
+#    volumes:
+#      - ./openapi.json:/mnt/openapi.json
