--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   app:
     image: fastapi-app:v1
     restart: always
-    container_name: app_1
+    container_name: app
     build:
       context: .
       dockerfile: Dockerfile
@@ -14,6 +14,7 @@ services:
       - 8002:8002
   mock_server:
     image: mockoon/cli:latest
+    container_name: mock_server
     command: [ "--data", "data", "--port", "3001" ]
     volumes:
       - ./mockoon/concung.json:/data:ro
@@ -21,6 +22,7 @@ services:
       - 3001:3001
   cc_swagger:
     image: swaggerapi/swagger-ui
+    container_name: cc_swagger
     ports:
       - "8081:8080"
     environment:
