--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       dockerfile: Dockerfile
     command: [ "python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8002", "--reload" ]
     volumes:
-      - .:/app
+      - .:/code
     ports:
       - 8002:8002
 
