--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,3 +30,29 @@ services:
       - SWAGGER_JSON=/mnt/openapi.json
     volumes:
       - ./openapi.json:/mnt/openapi.json
+
+  photoprism:
+    image: photoprism/photoprism:latest
+    restart: always
+    ports:
+      - 2342:2342 # [local port]:[container port]
+    environment:
+      PHOTOPRISM_DEBUG: "false"
+      PHOTOPRISM_PUBLIC: "true"
+    volumes:
+      - "./photoprism/photos:/photoprism/originals" # [local path]:[container path]
+      - "./photoprism/import:/photoprism/import"
+      - "./photoprism/database:/photoprism/database"
+
+#  photoprism:
+#    image: photoprism/photoprism:latest
+#    restart: always
+#    ports:
+#      - 2342:2342 # [local port]:[container port]
+#    environment:
+#      PHOTOPRISM_DEBUG: "false"
+#      PHOTOPRISM_PUBLIC: "true"
+#    volumes:
+#      - "./images/avif:/photoprism/originals" # [local path]:[container path]
+#      - "./photoprism/import:/photoprism/import"
+#      - "./photoprism/database:/photoprism/database"
