--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 version: '3'
 services:
+
   app:
     image: fastapi-app:v1
     restart: always
@@ -21,6 +22,7 @@ services:
       - ./mockoon/concung.json:/data:ro
     ports:
       - 3001:3001
+
   cc_swagger:
     image: swaggerapi/swagger-ui
     container_name: cc_swagger
@@ -32,3 +34,28 @@ services:
       - ./openapi.json:/mnt/openapi.json
 
 
+  photoprism:
+    image: photoprism/photoprism:latest
+    restart: always
+    ports:
+      - 2342:2342 # [local port]:[container port]
+    environment:
+      PHOTOPRISM_DEBUG: "false"
+      PHOTOPRISM_PUBLIC: "true"
+    volumes:
+      - "./photoprism/photos:/photoprism/originals" # [local path]:[container path]
+      - "./photoprism/import:/photoprism/import"
+      - "./photoprism/database:/photoprism/database"
+
+#  photoprism:
+#    image: photoprism/photoprism:latest
+#    restart: always
+#    ports:
+#      - 2342:2342 # [local port]:[container port]
+#    environment:
+#      PHOTOPRISM_DEBUG: "false"
+#      PHOTOPRISM_PUBLIC: "true"
+#    volumes:
+#      - "./images/avif:/photoprism/originals" # [local path]:[container path]
+#      - "./photoprism/import:/photoprism/import"
+#      - "./photoprism/database:/photoprism/database"
