--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,18 +14,25 @@ services:
     ports:
       - 8002:8002
 
-#  app_2:
-#    image: fastapi-app:v1
-#    restart: always
-#    container_name: app_2
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    command: [ "python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8003", "--reload" ]
-#    volumes:
-#      - .:/code
-#    ports:
-#      - 8003:8003
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "80:80"
+
+  #  app_2:
+  #    image: fastapi-app:v1
+  #    restart: always
+  #    container_name: app_2
+  #    build:
+  #      context: .
+  #      dockerfile: Dockerfile
+  #    command: [ "python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8003", "--reload" ]
+  #    volumes:
+  #      - .:/code
+  #    ports:
+  #      - 8003:8003
 
   mock_server:
     image: mockoon/cli:latest
