--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,18 @@ events {}
 http {
     server {
         listen 80;
+        server_name concung.mock_server.vn;
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name concung.mock_server.vn;
+
+        ssl_certificate /etc/nginx/ssl/concung.mock_server.vn.crt;
+        ssl_certificate_key /etc/nginx/ssl/concung.mock_server.vn.key;
 
         location / {
             proxy_pass http://app:8002;
